--- a/style.css
+++ b/style.css
@@ -109,6 +109,9 @@ p{font-family: "Cambria", serif;}
 }
 
 img {
-  width: 100%;
-  height: auto;
+  padding: 0;
+  display: block;
+  margin: 0 auto;
+  max-height: 100%;
+  max-width: 100%;
 }
