--- a/style.css
+++ b/style.css
@@ -47,6 +47,21 @@ html {
   transform: translate(-50%, -50%);
 }
 
+#banner {
+  background-image: url("https://content.codecademy.com/courses/web-101/unit-6/htmlcss1-img_tahoe.jpeg");
+  background-size: cover;
+  background-position: bottom center;
+  height: 700px;
+  width: 100%;
+}
+
+#banner .content h1 {
+  border: 3px solid white;
+  position: relative;
+  top: 50px;
+  width: 400px;
+  margin: 0 auto;
+}
 
 h1{font-family: "Garamond", serif; color: #2b0980}
 h2{font-family: "Garamond", serif; color: #2b0980}
