--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ html {
 }
 
 #banner {
-  background-image: url("https://content.codecademy.com/courses/web-101/unit-6/htmlcss1-img_tahoe.jpeg");
+  background-image: url("https://www.collegemagazine.com/wp-content/uploads/2022/02/alfons-morales-YLSwjSy7stw-unsplash-768x450.jpg");
   background-size: cover;
   background-position: bottom center;
   height: 700px;
